added images to /academics section.

--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row header">
       <h3>Journey Through the College Core</h3>
-      <p><strong>8 ways</strong> we deliver the college core:</p>
+      <p><strong>8 ways</strong> you experience the liberal arts with the SDC Rivendell Program:</p>
     </div>
 
     <div class="row">
@@ -34,14 +34,11 @@
               <%= content_tag :p, academics_read_more_link('christianly') %>
             </div>
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'christianly image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'christianly.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
           <div id="sequentially" class="tab-pane fade">     <!-- SEQUENTIALLY -->
-            <div class="col-md-6 image">
-              <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded' %>
-            </div>
             <div class="col-md-6 info">
               <h4>Progress through the college core <strong><i>sequentially</i></strong></h4>
               <p>Study the liberal arts one subject at a time in the flow of the biblical narrative.</p>
@@ -50,6 +47,9 @@
                 <li>Intake the unity of knowledge</li>
               </ul>
               <%= content_tag :p, academics_read_more_link('sequentially') %>
+            </div>
+            <div class="col-md-6 image">
+              <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
@@ -68,13 +68,13 @@
               <%= content_tag :p, academics_read_more_link('communally') %>
             </div>
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'communally image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'communally.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
           <div id="globally" class="tab-pane fade">     <!-- GLOBALLY -->
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'globally image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'globally.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
             <div class="col-md-6 info">
               <h4>Journey through the college core <strong><i>globally</i></strong></h4>
@@ -100,13 +100,13 @@
               <%= content_tag :p, academics_read_more_link('critically') %>
             </div>
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'critically image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'critically.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
           <div id="classically" class="tab-pane fade">     <!-- CLASSICALLY -->
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'classically image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'classically.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
             <div class="col-md-6 info">
               <h4>Approach the college core <strong><i>classically</i></strong></h4>
@@ -131,19 +131,19 @@
               <%= content_tag :p, academics_read_more_link('socratically') %>
             </div>
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'socratically image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'socratically.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
           <div id="holistically" class="tab-pane fade">     <!-- HOLISTICALLY -->
             <div class="col-md-6 image">
-              <%= holder_tag '359x222', 'holistically image (359x322)', {}, class:'img-responsive' %>
+              <%= image_tag 'holistically.jpg', width:'359', class:'img-responsive img-rounded' %>
             </div>
             <div class="col-md-6 info">
               <h4>Practice the college core <strong><i>holistically</i></strong></h4>
               <p>You are more than a brain.  You are intellectual, spiritual, moral, social, and emotional.</p>
               <ul>
-                <li>Develop habits of character.</li>
+                <li>Develop habits of character</li>
                 <li>Polish life skills essential for success</li>
                 <li>Become a Student of Honor<sup><small>TM</small></sup></li>
               </ul>
