--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('christianly.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -20,7 +20,7 @@
         <div class="content">
 
           <p>
-            By design, the Rivendell 5 Pursuits Program aims at offering an innovative approach to Liberal Arts education
+            By design, the SDC Rivendell 5 Pursuits Program aims at offering an innovative approach to Liberal Arts education
             that is intentionally informed by Christian theism.  Rivendell assumes that Liberal Arts Education
             begins with a peculiar orientation, i.e. Christian theism.
           </p>
