--- a/app/views/site_pages/classically.html.erb
+++ b/app/views/site_pages/classically.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('classically.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -20,7 +20,7 @@
         <div class="content">
 
           <p>
-            To become the best students possible they must study the best works available. Rivendell utilizes
+            To become the best students possible they must study the best works available. SDC Rivendell utilizes
             a contemporary and historical “Great Books” curriculum rather than the standard textbook-based
             curriculum. While textbooks come and go, the “Great Books” are the literary, scientific, political
             and social classics that have stood the test of time and are proven to have had the greatest
@@ -53,7 +53,7 @@
           </p>
 
           <p>
-            However, what makes Rivendell’s “Great Books” curriculum truly exceptional is the amount of
+            However, what makes SDC Rivendell’s “Great Books” curriculum truly exceptional is the amount of
             time and emphasis placed on studying “The Greatest Book,” The Holy Scriptures. The Bible is
             the blueprint for reality and the ultimate authoritative source. It has been the single most
             influential book in the formation of Western Civilization and the basis for remaining a free and
