--- a/app/views/site_pages/communally.html.erb
+++ b/app/views/site_pages/communally.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('communally.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -26,14 +26,14 @@
           </p>
 
           <p>
-            Rivendell introduces IN-COMM education, where learning takes place withIN-COMMunity.  Fifteen to
+            SDC Rivendell employs IN-COMM education, where learning takes place withIN-COMMunity.  Fifteen to
             thirty students, two faculty and one mentor embark on an educational journey together, remaining
             a unit for the duration of the program.  In other words, students never change classes, classmates
             or professors.
           </p>
 
           <p>
-            Patterned after Jesus’ discipleship model,’ Rivendell’s cohort education encourages a more
+            Patterned after Jesus’ discipleship model,’ SDC Rivendell’s cohort education encourages a more
             dynamic, collaborative, and supportive learning environment.
           </p>
 
@@ -42,10 +42,10 @@
 
             <ol>
 
-              <li>The concentrated and sustained time to impact a life.</li>
-              <li>The platform to merge conceptual knowledge and application.</li>
-              <li> The opportunity to observe how students live in relation to what they learn.</li>
-              <li>The opportunity to model truth.</li>
+              <li>the concentrated and sustained time to impact a life</li>
+              <li>the platform to merge conceptual knowledge and application</li>
+              <li>the opportunity to observe how students live in relation to what they learn</li>
+              <li>the opportunity to model truth</li>
 
             </ol>
 
