--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('globally.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -33,7 +33,7 @@
           </p>
 
           <p>
-            Rivendell provides the opportunity to break out of your shell, embrace new cultures, expand your
+            SDC Rivendell provides the opportunity to break out of your shell, embrace new cultures, expand your
             palette and yes, even enlarge your resume as companies look for overseas experience.
           </p>
 
@@ -49,11 +49,11 @@
 
             <ul>
 
-              <li>Develop a connoisseur’s eye for beauty by unearthing the contextual significance and theistic undertones of art.</li>
-              <li>Discuss the social significance and moral implications of artwork. </li>
-              <li>Interpret the story portrayed by the artist and analyze their narrative with the critical thinking skills learned back in the states.</li>
-              <li>Acquire skills to commentate by developing a sensitivity to aesthetic methodologies, styles, and functions present in pieces put before you.</li>
-              <li>Gaze wondrously at a single piece for hours as you study and evaluate it’s message and composition.</li>
+              <li>Develop a connoisseur’s eye for beauty by unearthing the contextual significance and theistic undertones of art</li>
+              <li>Discuss the social significance and moral implications of artwork</li>
+              <li>Interpret the story portrayed by the artist and analyze their narrative with the critical thinking skills learned back in the states</li>
+              <li>Acquire skills to commentate by developing a sensitivity to aesthetic methodologies, styles, and functions present in pieces put before you</li>
+              <li>Gaze wondrously at a single piece for hours as you study and evaluate it’s message and composition</li>
 
             </ul>
 
