--- a/app/views/site_pages/holistically.html.erb
+++ b/app/views/site_pages/holistically.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('holistically.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -95,11 +95,13 @@
           </p>
 
           <p>
-            Rather than developing one aspect of the person, namely, the intellect, Rivendell believes the
+            Rather than developing one aspect of the person, namely, the intellect, SDC Rivendell believes the
             best education is one that develops every aspect of a person. As such, our program includes: a
             rigorous academic pursuit, spiritual formation, holy and healthy living, community service and
             life skills, detailed in the tabs below.
           </p>
+
+          <%= content_tag :p, nil %>
 
           <div role="tabpanel">
 
