--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -55,7 +55,7 @@
           </p>
 
           <p>
-            Rivendell introduces sequenced-modular education, where the College Core is studied one subject
+            SDC Rivendell employs sequenced-modular education, where the College Core is studied one subject
             at a time in a sequence that follows the flow of the biblical narrative. Rivendell’s academic
             semesters, illustrated below, are listed in the order students study them.
 
@@ -85,7 +85,7 @@
 
           <p>
             <strong>Important note:</strong><br />
-            Rivendell holds that history, composition, and speech are to be an integral part of every
+            SDC Rivendell holds that history, composition, and speech are to be an integral part of every
             academic module and thus not taught separately (compartmentalized). For example, when approaching
             History, we call upon the wisdom of Neil Postman who believes history should be the focal point
             when studying each discipline. He writes,
