--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('socratically.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -20,9 +20,9 @@
         <div class="content">
 
           <p>
-            Rivendell believes students are to be active learners, not passive recipients of information.
+            SDC Rivendell believes students are to be active learners, not passive recipients of information.
             Therefore, we take an unconventional approach regarding the classroom.  Traditionally, the
-            classroom is reserved for lectures.  In the Rivendell Program, lectures take place outside the
+            classroom is reserved for lectures.  In the SDC Rivendell Program, lectures take place outside the
             classroom in the form of assigned readings.  Students learn to read texts (primarily the Great
             Books) as a lecture, given by one of the history’s most brilliant minds.  Therefore, when coming
             to class having read an assigned text, students have in essence already participated in lecture.
