--- a/app/views/site_pages/critically.html.erb
+++ b/app/views/site_pages/critically.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row">
       <div class="col-md-12">
-        <%= content_tag :div, image_tag('blogpost5.png', class:'img-responsive'), class:'main-pic' %>
+        <%= content_tag :div, image_tag('critically.jpg', class:'img-responsive'), class:'main-pic' %>
       </div>
     </div>
 
@@ -42,7 +42,7 @@
           </blockquote>
 
           <p>
-            Rivendell’s entire academic program is structured around this principle – teaching students “how
+            SDC Rivendell’s entire academic program is structured around this principle – teaching students “how
             to learn” in order that they may become life-long students.  Spoon-feeding information is
             minimized. We believe learning is essentially an activity that the students do within themselves
             and that they are the primary agents in their education.  Therefore, in the beginning students
