financial aid and tuition images added to /admissions section.

--- a/app/views/site_pages/_finaid_pane.erb
+++ b/app/views/site_pages/_finaid_pane.erb
@@ -14,7 +14,7 @@
 </div>
 
 <div class="col-md-6 image">
-  <%= holder_tag '643x246', 'fin-aid image (643x246)', {}, class:'img-responsive' %>
+  <%= image_tag 'finaid.jpg', class:'img-responsive img-rounded' %>
 </div>
 
 <div class="col-md-12 info">
