--- a/app/views/site_pages/_tuition_pane.erb
+++ b/app/views/site_pages/_tuition_pane.erb
@@ -16,7 +16,7 @@
 </div>
 
 <div class="col-md-6 image">
-  <%= holder_tag '643x246', 'tuition image (643x246)', {}, class:'img-responsive' %>
+  <%= image_tag 'tuition.jpg', class:'img-responsive img-rounded' %>
 </div>
 
 <div class="col-md-12 info">
