--- a/app/views/layouts/_navigation.erb
+++ b/app/views/layouts/_navigation.erb
@@ -2,6 +2,8 @@
 
 <%= nav_link_to 'Academics', academics_path, {}, { wrapper: 'li', url_segment: 1 } %>
 
+<%= nav_link_to 'Student Life', student_life_path, {}, { wrapper: 'li' } %>
+
 <%= nav_link_to 'Admissions', admissions_path, {}, { wrapper: 'li', url_segment: 1 } %>
 
 <%= nav_link_to 'Contact', new_contact_path, {}, { wrapper: 'li' } %>
