--- a/app/views/layouts/_landing_footer.erb
+++ b/app/views/layouts/_landing_footer.erb
@@ -17,6 +17,7 @@
     <ul>
       <%= content_tag :li, link_to('About', about_path) %>
       <%= content_tag :li, link_to('Academics', academics_path) %>
+      <%= content_tag :li, link_to('Student Life', student_life_path) %>
       <%= content_tag :li, link_to('Admissions', admissions_path) %>
       <%= content_tag :li, link_to('Contact us', new_contact_path) %>
     </ul>
