--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -75,7 +75,7 @@
       </div>
 
       <div class="col-md-6">
-        <h1>Rivendell 5 Pursuits Program Mission</h1>
+        <h1>Rivendell 5 Pursuits Program Vision</h1>
         <p>
           To restore all things to Christ by imparting the biblical worldview to thousands of students in
           multiple locations in America and around the world who will go on to serve God and mankind in every
