put walled garden back in place for development sprint.

--- a/app/views/site_pages/_credits_pane.erb
+++ b/app/views/site_pages/_credits_pane.erb
@@ -3,7 +3,7 @@
   <h4>Transferring credits to San Diego Christian</h4>
 
   <p>
-    Because the Rivendell program is so unique, and because Rivendell’s Sequenced Modular Education™ is a
+    Because the SDC Rivendell program is so unique, and because Rivendell’s Sequenced Modular Education™ is a
     standalone curriculum, we cannot apply academic credits completed at other colleges or universities toward
     our Associate of Arts degree. Since we offer one continuous 16-month program, students can neither join
     a program midway nor opt out of a class because they have completed similar coursework elsewhere. However,
@@ -13,7 +13,7 @@
   <h4>Transferring credits from San Diego Christian</h4>
 
   <p>
-    San Diego Christian has several unique majors and programs. Rivendell program students can go to the main
+    San Diego Christian has several unique majors and programs. SDC Rivendell program students can go to the main
     campus in Santee, CA to complete their bachelor’s degree.
   </p>
 
