--- a/app/views/site_pages/_deadlines_pane.erb
+++ b/app/views/site_pages/_deadlines_pane.erb
@@ -8,7 +8,7 @@
   </p>
 
   <p>
-    Acceptance to The Rivendell Program does not guarantee admission into the program. Admission is confirmed by
+    Acceptance to the SDC Rivendell program does not guarantee admission into the program. Admission is confirmed by
     the Enrollment Reservation Deposit. This deposit secures the student’s spot in class, and will be received
     on a first-come, first-served basis. The deposit is applied toward the student’s first semester tuition.
   </p>
