--- a/app/views/site_pages/_tuition_pane.erb
+++ b/app/views/site_pages/_tuition_pane.erb
@@ -2,7 +2,7 @@
 
   <h4>All-inclusive college experience</h4>
   <p>
-    Rivendell 5 Pursuits Program is an “all-inclusive” college experience. There are four total
+    SDC Rivendell 5 Pursuits Program is an “all-inclusive” college experience. There are four total
     semesters in the program. Our goal is to be as cost effective as possible for our students
     while offering a high value program including features such as study abroad, cultural events,
     etc. We feel these included features are not only beneficial, but essential in equipping
@@ -10,7 +10,7 @@
   </p>
   <p>
     Please see our <%= link_to 'financial aid tab', '#fin-aid', data: { toggle:'tab' } %> to learn more about the different
-    ways you can fund your Rivendell experience through scholarships, grants, and loans.
+    ways you can fund your experience through scholarships, grants, and loans.
   </p>
 
 </div>
@@ -91,7 +91,7 @@
       This deposit is fully refundable should an International student’s visa application be denied.): $1000</li>
   </ul>
 
-  <h4>Rivendell’s Tuition Lock Guarantee:</h4>
+  <h4>SDC Rivendell’s Tuition Lock Guarantee:</h4>
   <p>
     The cost of tuition will remain the same throughout the four consecutive semesters of a student’s
     enrollment. This tuition lock is voided if a student withdraws from the program for any reason and
