--- a/app/views/site_pages/about.html.erb
+++ b/app/views/site_pages/about.html.erb
@@ -25,9 +25,9 @@
       <div class="col-md-12">
         <div class="flexslider">
           <ul class="slides">
-            <%= content_tag :li, image_tag('office1.png') %>
-            <%= content_tag :li, image_tag('office2.png') %>
-            <%= content_tag :li, image_tag('office3.png') %>
+            <%= content_tag :li, image_tag('aboutus1.jpg') %>
+            <%= content_tag :li, image_tag('aboutus2.jpg') %>
+            <%= content_tag :li, image_tag('aboutus3.jpg') %>
           </ul>
         </div>
       </div>
