--- a/app/views/site_pages/christianly.html.erb
+++ b/app/views/site_pages/christianly.html.erb
@@ -14,7 +14,8 @@
           Learn the college core <strong><em>Christianly</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          "The Christian belief system, which the Christian knows to be grounded in divine
+          revelation, is relevant to all of life." - Carl F. H. Henry
         </div>
 
         <div class="content">
