--- a/app/views/site_pages/communally.html.erb
+++ b/app/views/site_pages/communally.html.erb
@@ -14,7 +14,7 @@
           Experience the college core <strong><em>communally</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          “The next best thing to being wise oneself is to live in a circle of those who are.” ― C.S. Lewis
         </div>
 
         <div class="content">
