--- a/app/views/site_pages/critically.html.erb
+++ b/app/views/site_pages/critically.html.erb
@@ -14,7 +14,7 @@
           Think through the college core <strong><em>critically</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          “We are not a cog in a machine, … not a piece of theater; [we] really can influence history." - Francis Schaeffer
         </div>
 
         <div class="content">
