--- a/app/views/site_pages/globally.html.erb
+++ b/app/views/site_pages/globally.html.erb
@@ -14,7 +14,8 @@
           Journey through the college core <strong><em>globally</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          “Broad, wholesome, charitable views of men and things cannot be acquired by vegetating in one little corner
+          of the earth all of one’s lifetime.” – Mark Twain
         </div>
 
         <div class="content">
