--- a/app/views/site_pages/admissions.html.erb
+++ b/app/views/site_pages/admissions.html.erb
@@ -5,7 +5,7 @@
       <div class="col-md-12">
         <h3>Welcome to our Admissions Department</h3>
         <p>
-          We're glad you have decided to learn more about Rivendell 5 Pursuits Program!  We are honored to serve
+          We're glad you have decided to learn more about the SDC Rivendell 5 Pursuits Program!  We are honored to serve
           your needs.
         </p>
       </div>
