--- a/app/views/site_pages/holistically.html.erb
+++ b/app/views/site_pages/holistically.html.erb
@@ -14,7 +14,7 @@
           Practice the college core <strong><em>holistically</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          "The aim of a college education is to teach you to know a good man when you see one." - William James
         </div>
 
         <div class="content">
