--- a/app/views/site_pages/socratically.html.erb
+++ b/app/views/site_pages/socratically.html.erb
@@ -14,7 +14,7 @@
           Discuss the college core <strong><em>socratically</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          T“The comprehensive mind is always dialectical.” ― Plato
         </div>
 
         <div class="content">
