--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -58,6 +58,39 @@
       </div>
     </div>
 
+  </div>
+</div>
+
+<div id="first-option">
+  <div class="container">
+
+    <div class="row header">
+      <div class="col-md-12">
+        <h2>Looking for a college where student life is part of the curriculum?</h2>
+        <p>Student life is an important part of your education experience.</p>
+      </div>
+    </div>
+
+    <div class="row feature">
+      <div class="col-md-6 info">
+        <h4>Attend cultural events.  It's part of our curriculum.</h4>
+        <p>
+          Every semester students participate in one or more formal evening events. Students dress in proper attire,
+          entertain an escort, dine at an upscale restaurant, and attend a sophisticated cultural event such as an opera,
+          symphony or play.
+        </p>
+        <p>
+          Past cultural events include:  <em>Camelot</em>, <em>Once</em>,
+          <em>Beauty and the Beast</em>, and <em>Mid Summer Night's Dream</em>
+        </p>
+      </div>
+      <div class="col-md-6 image">
+        <%= holder_tag '402x222', 'cultural events image (404x222)', {}, class:'img-responsive' %>
+      </div>
+    </div>
 
   </div>
+
+
+
 </div>
