--- a/app/views/site_pages/classically.html.erb
+++ b/app/views/site_pages/classically.html.erb
@@ -14,7 +14,8 @@
           Approach the college core <strong><em>classically</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          "We have abandoned those ideals once animating our civilization, refusing to learn them anew with each generation.
+          We have assumed their transfer to be automatic." - Octavius Davis
         </div>
 
         <div class="content">
