--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -14,7 +14,7 @@
           Progress through the college core <strong><em>sequentially</em></strong>
         </div>
         <div class="author">
-          There is a little space here for another sentence.
+          "Life is a sequence of events." - Trey Gafford
         </div>
 
         <div class="content">
