--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -3,7 +3,7 @@
 
     <div class="row header">
       <h3>Student Life at SDC Rivendell</h3>
-      <p>We prepare students of honor, not just honor students.</p>
+      <p>We prepare students for life, not just a job.</p>
     </div>
 
     <div class="row">
@@ -67,7 +67,7 @@
     <div class="row header">
       <div class="col-md-12">
         <h2>Looking for a college where student life is part of the curriculum?</h2>
-        <p>Student life is an important part of your education experience.</p>
+        <p>Student life is a vital component part of your SDC Rivendell experience.</p>
       </div>
     </div>
 
@@ -89,8 +89,43 @@
       </div>
     </div>
 
+    <div class="row feature backwards">
+      <div class="col-md-6 info">
+        <h4>Health and fitness.  They're also part of our curriculum.</h4>
+        <p>
+          Part of the SDC Rivendell program involves getting students out of their chairs and away from their books. Students
+          participate in a variety of sports such as basketball, volleyball, ultimate Frisbee, dodge-ball, flag football,
+          and soccer. If intramural sports are not your thing, various student-organized exercise regimens such as running,
+          walking, hiking, biking, and aerobics are also available. Either way, the object is to get the heart pumping in an
+          effort to lead a healthier, happier life.
+        </p>
+      </div>
+      <div class="col-md-6 image">
+        <%= holder_tag '402x222', 'health & fitness image (404x222)', {}, class:'img-responsive' %>
+      </div>
+    </div>
+
+    <div class="row feature">
+      <div class="col-md-6 info">
+        <h4>Enjoy the amenities of SDC's Minnesota Campus.</h4>
+        <p>
+          Our campus gymnasium features basketball, volleyball, and racquetball courts, as well as a weight room with both free weights and nautilus equipment.
+          It is complete with men’s and women’s locker rooms, showers, and even a kitchen.
+          The gym provides students with a great place to exercise, especially when the winter weather arrives.
+        </p>
+      </div>
+      <div class="col-md-6 image">
+        <%= holder_tag '402x222', 'extra-curricular image (404x222)', {}, class:'img-responsive' %>
+      </div>
+    </div>
+
   </div>
+</div>
 
+<div id="cta">
+  <div class="container">
 
+    <%= render 'shared/apply_cta' %>
 
+  </div>
 </div>
