beginning work on photo gallery

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,8 +36,7 @@
 @import 'partials/pages/aboutus';
 @import 'partials/pages/features';
 @import 'partials/pages/blogpost';
-@import 'partials/pages/services';
-@import 'partials/pages/portfolio';
+@import 'partials/pages/gallery';
 @import 'partials/pages/contactus';
 @import 'partials/pages/signup';
 @import 'partials/pages/404';
