added temp images to student life page.

--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -25,13 +25,13 @@
               </p>
             </div>
             <div class="col-md-6 image">
-              <%= holder_tag '359x322', 'academic facilities', {}, class:'img-responsive' %>
+              <%= image_tag 'student_life/academic_facilities.jpg', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
           <div id="dining-facilities" class="tab-pane fade">  <!-- DINING FACILITIES -->
             <div class="col-md-6 image">
-              <%= holder_tag '359x322', 'dining facilities', {}, class:'img-responsive' %>
+              <%= image_tag 'student_life/dining_facilities.jpg', class:'img-responsive img-rounded' %>
             </div>
             <div class="col-md-6 info">
               <h4>Break bread with your classmates ...(need edit)</h4>
@@ -49,7 +49,7 @@
               </p>
             </div>
             <div class="col-md-6 image">
-              <%= holder_tag '359x322', 'student housing', {}, class:'img-responsive' %>
+              <%= image_tag 'student_life/student_housing.jpg', class:'img-responsive img-rounded' %>
             </div>
           </div>
 
@@ -85,7 +85,7 @@
         </p>
       </div>
       <div class="col-md-6 image">
-        <%= holder_tag '402x222', 'cultural events image (404x222)', {}, class:'img-responsive' %>
+        <%= image_tag 'student_life/cultural_events.jpg', class:'img-responsive img-rounded' %>
       </div>
     </div>
 
@@ -101,7 +101,7 @@
         </p>
       </div>
       <div class="col-md-6 image">
-        <%= holder_tag '402x222', 'health & fitness image (404x222)', {}, class:'img-responsive' %>
+        <%= image_tag 'student_life/health_fitness.jpg', class:'img-responsive img-rounded' %>
       </div>
     </div>
 
@@ -115,7 +115,7 @@
         </p>
       </div>
       <div class="col-md-6 image">
-        <%= holder_tag '402x222', 'extra-curricular image (404x222)', {}, class:'img-responsive' %>
+        <%= image_tag 'student_life/amenities.jpg', class:'img-responsive img-rounded' %>
       </div>
     </div>
 
