added photos for 8 ways landing page.

--- a/app/views/shared/_eight_features.erb
+++ b/app/views/shared/_eight_features.erb
@@ -18,7 +18,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'christianly image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'christianly.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -34,7 +34,7 @@
       </ul>
     </div>
     <div class="col-md-6 image" %>
-      <%= holder_tag '359x222', 'sequentially image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'sequential.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -54,7 +54,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'communally image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'communally.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -71,7 +71,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'globally image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'globally.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -88,7 +88,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'critically image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'critically.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -104,7 +104,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'classically image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'classically.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -121,7 +121,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'socratically image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'socratically.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
@@ -138,7 +138,7 @@
       </ul>
     </div>
     <div class="col-md-6 image">
-      <%= holder_tag '359x222', 'classically image (359x322)', {}, class:'img-responsive' %>
+      <%= image_tag 'holistically.jpg', width:'359', class:'img-responsive img-rounded' %>
     </div>
   </div>
 
