added images to student life and sequentially.

--- a/app/views/site_pages/sequentially.html.erb
+++ b/app/views/site_pages/sequentially.html.erb
@@ -13,9 +13,6 @@
         <div class="title">
           Progress through the college core <strong><em>sequentially</em></strong>
         </div>
-        <div class="author">
-          "Life is a sequence of events." - Trey Gafford
-        </div>
 
         <div class="content">
 
@@ -37,7 +34,7 @@
             hodgepodge of isolated subjects notoriously referred to as the General Education Requirements
             or rather Gen Eds.
 
-            <%= holder_tag('789x150', 'photo for craziness', {}, class:'img-responsive') %>
+            <%= image_tag 'bad_method.png', class:'img-responsive' %>
           </p>
 
           <p>
@@ -51,7 +48,7 @@
             what was once a meaningless, hodgepodge of isolated subjects becomes
             a meaningful, orderly and coherent whole. And once more, students have a reason to learn.
 
-            <%= holder_tag('789x150', 'photo for sequentially', {}, class:'img-responsive') %>
+            <%= image_tag 'good_method.png', class:'img-responsive' %>
           </p>
 
           <p>
@@ -59,7 +56,7 @@
             at a time in a sequence that follows the flow of the biblical narrative. Rivendell’s academic
             semesters, illustrated below, are listed in the order students study them.
 
-            <%= holder_tag('789x150', 'photo for sequenced, modular curriculum', {}, class:'img-responsive') %>
+            <%= image_tag 'our_method.jpeg', class:'img-responsive' %>
           </p>
 
           <p>
