--- a/app/views/site_pages/student_life.html.erb
+++ b/app/views/site_pages/student_life.html.erb
@@ -19,9 +19,10 @@
 
           <div id="academic-facilities" class="tab-pane fade in active">  <!-- ACADEMIC FACILITIES -->
             <div class="col-md-6 info">
-              <h4>Your classroom ...(need ending)</h4>
+              <h4>Socrates would be jealous of your classroom!</h4>
               <p>
-                Need a teaser paragraph about the socratic classroom and the 'world is your classroom.'
+                Each room can hold from 40 to 80 students, and is equipped with high-speed wireless internet,
+                and various audio-video capabilities.
               </p>
             </div>
             <div class="col-md-6 image">
@@ -34,18 +35,24 @@
               <%= image_tag 'student_life/dining_facilities.jpg', class:'img-responsive img-rounded' %>
             </div>
             <div class="col-md-6 info">
-              <h4>Break bread with your classmates ...(need edit)</h4>
+              <h4>Break bread with your classmates three times a day.</h4>
               <p>
-                Need a teaser paragraph about the how we eat dinner as a community.
+                Campus dining offers wide windows, cozy fireplaces, and tables for 12 to 4—which always can be rearranged
+                to make room for more. Perhaps you’ll gather with others from your dorm, corhort, or SDC Rivendell staff.
+                Dine with a professor, meet with a mentor, or perhaps a last-minute table shared will lead to a whole new
+                friendship.
               </p>
             </div>
           </div>
 
           <div id="student-housing" class="tab-pane fade">  <!-- STUDENT HOUSING -->
             <div class="col-md-6 info">
-              <h4>Live in community...(need ending)</h4>
+              <h4>Live in community with your fellow classmates.</h4>
               <p>
-                Need a teaser paragraph about student housing.
+                Students experience IN-COMM education by living and participating in authentic Christian community within
+                their core group of 30 students. Students are housed in either traditional dorm rooms, or 2-3 bedroom
+                apartment-style dormitories. Rooms are furnished with standard dorm-room furniture, and residents on each
+                floor share a student common area and shower facilities.
               </p>
             </div>
             <div class="col-md-6 image">
