--- a/app/views/site_pages/academics.html.erb
+++ b/app/views/site_pages/academics.html.erb
@@ -165,7 +165,7 @@
     <div class="row header">
       <div class="col-md-12">
         <h2>Imagine a college program that prepares you for life!</h2>
-        <p>SDC Rivendell equips you with with the foundations to success in college and in life.</p>
+        <p>SDC Rivendell equips you with with the foundations to succeed in college and in life.</p>
       </div>
     </div>
 
