created NAUMS landing page and gave local variables to hero partial.

--- a/app/views/shared/_hero.erb
+++ b/app/views/shared/_hero.erb
@@ -1,16 +1,33 @@
 <div class="container">
 
-  <h1 class="hero-text animated fadeInDown">
-    Spend your first 16-months<br />
-    of college with us
-  </h1>
+  <% if heading %>
 
-  <p class="sub-text animated fadeInDown">
-    Experience the journey of a lifetime.
-  </p>
+      <%= content_tag :h1, heading, class:'hero-text animated fadeInDown' %>
+
+  <% else %>
+
+    <h1 class="hero-text animated fadeInDown">
+        Spend your first 16-months<br />
+        of college with us
+    </h1>
+
+  <% end %>
+
+  <% if sub_heading %>
+
+      <%= content_tag :p, sub_heading, class:'sub-text animated fadeInDown' %>
+
+  <% else %>
+
+    <p class="sub-text animated fadeInDown">
+        Experience the journey of a lifetime.
+    </p>
+
+  <% end %>
 
   <div class="cta animated fadeInDown">
     <%= link_to 'Request a brochure', new_lead_path, class:'button-outline' %>
+    <%= link_to 'Learn about our Academics', academics_path, class:'button' %>
   </div>
 
   <%= content_tag :div, nil, class:'img' %>
