--- a/app/views/layouts/_head.erb
+++ b/app/views/layouts/_head.erb
@@ -14,6 +14,8 @@
 
 <%= javascript_include_tag 'application', params[:controller], 'data-turbolinks-track' => true %>
 
+<%= favicon_link_tag %>
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
 <!--[if lt IE 9]>
