adding video to home and landing page.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -3,16 +3,15 @@
   <div class="row header">
     <div class="col-md-12">
       <h2>An Exceptional College Core Program</h2>
-      <p>Don't just take the core curriculum.  <strong>Experience</strong> it.</p>
     </div>
   </div>
 
   <div class="row feature">
     <div class="col-md-6 info">
-      <h4>Study one subject at a time...</h4>
+      <h4>Ask and answer the biggest questions humanity has ever encountered...</h4>
       <p>
-        Each subject deserves your full attention.  Our sequenced, modular curriculum will enable you to discover the
-        rich, profound significance God placed in the liberal arts.
+        This is just some filler text.  This is just some filler text. This is just some filler text.
+      </p>
     </div>
     <div class="col-md-6 image" %>
       <%= image_tag 'focus-01.png', class:'img-responsive' %>
@@ -23,13 +22,27 @@
 
   <div class="row feature backwards">
     <div class="col-md-6 info">
-      <h4>...in the flow of the biblical narrative.</h4>
+      <h4>...with the best minds the Western tradition has ever produced...</h4>
       <p>
-        Cultivate a love for learning by discovering the unity of knowledge.
+        This is just some filler text.  This is just some filler text. This is just some filler text.
       </p>
     </div>
     <div class="col-md-6 image" %>
       <%= image_tag 'biblical_narrative.png', class:'img-responsive' %>
+    </div>
+  </div>
+
+  <%= content_tag :div, nil, class:'divider' %>
+
+  <div class="row feature">
+    <div class="col-md-6 info">
+      <h4>...all in the context of the greatest story ever told -- the Bible</h4>
+      <p>
+        This is just some filler text.  This is just some filler text. This is just some filler text.
+      </p>
+    </div>
+    <div class="col-md-6 image" %>
+      <%= image_tag 'focus-01.png', class:'img-responsive' %>
     </div>
   </div>
 
