added video to home and landing page banners.

--- a/app/views/shared/_features.erb
+++ b/app/views/shared/_features.erb
@@ -2,7 +2,7 @@
 
   <div class="row header">
     <div class="col-md-12">
-      <h2>An Exceptional College Core Program</h2>
+      <h2>Take the road less traveled.</h2>
     </div>
   </div>
 
