--- a/app/views/shared/_reasons.erb
+++ b/app/views/shared/_reasons.erb
@@ -3,6 +3,16 @@
   <div class="row header">
     <div class="col-md-12">
 
+      <h3 class="m-b-xl">Experience an exceptional college core program.</h3>
+
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="embed-responsive embed-responsive-16by9">
+
+      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/iO1x38-PJtM?rel=0&amp;controls=0&amp;showinfo=0"allowfullscreen></iframe>
+
     </div>
   </div>
 
